# flux-users

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Dockerfile  cd.yaml  ci.yaml
lib/api/: Cargo.toml  build.rs
lib/api/src/: auth.proto  lib.rs  users.proto
lib/migration/: Cargo.toml
lib/migration/src/: lib.rs  m20240924_105951_create_users.rs  m20240924_110240_create_user_credentials.rs  m20240924_110302_create_user_challenges.rs  m20240928_165536_create_indexes.rs  m20250601_184245_add_locale_to_users.rs
settings/: default.toml
src/: app.rs  main.rs
src/app/: auth.rs  error.rs  settings.rs  state.rs  users.rs
src/app/auth/: error.rs  grpc.rs  passkey.rs  repo.rs  service.rs  settings.rs
src/app/auth/repo/: user.rs  user_challenge.rs  user_credential.rs
src/app/users/: grpc.rs  repo.rs  service.rs
src/app/users/repo/: user.rs
