[package]
name = "flux-users"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib/api", "lib/migration"]
resolver = "2"

[dependencies]
flux-users-api = { path = "lib/api" }
flux-lib = { git = "https://github.com/thefluxapp/flux-lib.git" }

anyhow = "1.0.96"
thiserror = "2.0.11"
base64 = "0.22.1"
config = { version = "0.15", default-features = false, features = ["toml"] }
log = "0.4.25"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.13.2", features = ["v7"] }
rand = "0.9.0"
random_color = "1.0.0"
url = "2.5.4"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"

axum = "0.7.9"

tokio = { version = "1.43.0", features = ["full"] }

tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-health = "0.12.3"

sea-orm = { version = "1.1.5", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = { version = "3.12.0", features = ["base64"] }

mry = "0.10.0"

coset = "0.3.8"
sha2 = "0.10.8"
p256 = "0.13.2"
ecdsa = { version = "0.16.9", features = ["der"] }
