[package]
name = "flux-users"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib/api", "lib/migration"]
resolver = "2"

[dependencies]
flux-users-api = { path = "lib/api" }
flux-lib = { git = "https://github.com/thefluxapp/flux-lib.git" }

anyhow = "1.0.99"
thiserror = "2.0.14"
base64 = "0.22.1"
config = { version = "0.15", default-features = false, features = ["toml"] }
log = "0.4.27"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v7"] }
rand = "0.9.2"
random_color = "1.1.0"
url = "2.5.4"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"

axum = "0.8.4"

tokio = { version = "1.47.1", features = ["full"] }

tonic = "0.14.1"
tonic-reflection = "0.14.1"
tonic-health = "0.14.1"

sea-orm = { version = "1.1.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_with = { version = "3.14.0", features = ["base64"] }

mry = "0.14.0"

coset = "0.3.8"
sha2 = "0.10.9"
p256 = "0.13.2"
ecdsa = { version = "0.16.9", features = ["der"] }
